--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         <div>
           <a href="desafio-01/index.html" target="_blank">Primeiro projeto</a>
         </div>
+        <div>
+          <a href="desafio-02/index.html" target="_blank">Segundo projeto</a>
+        </div>
+        <div>
+          <a href="desafio-03/index.html" target="_blank">Terceiro projeto</a>
+        </div>
+        <div>
+          <a href="desafio-04/index.html" target="_blank">Quarto projeto</a>
+        </div>
+        <div>
+          <a href="desafio-05/index.html" target="_blank">Quinto projeto</a>
+        </div>
       </section>
     </main>
   </body>
